deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  ports:
    - name: http
      port: 80
  type: ClusterIP
